// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RevealBurst hero renders default snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      {
        "height": 320,
        "width": 320,
      },
    ]
  }
>
  <Svg
    height={320}
    viewBox="0 0 320 320"
    width={320}
  >
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-0"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-1"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-2"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-3"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-4"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-5"
    />
  </Svg>
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#ECFDF5",
            "justifyContent": "center",
            "shadowColor": "#10B981",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.18,
            "shadowRadius": 12,
          },
          {
            "borderRadius": 56,
            "height": 112,
            "width": 112,
          },
          {
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
      testID="reveal-burst-badge"
    >
      <Svg
        fill="none"
        height={67}
        viewBox="0 0 24 24"
        width={67}
      >
        <Circle
          cx="10"
          cy="10"
          fill="none"
          r="6"
          stroke="#0A0A0B"
          strokeWidth={6.979166666666667}
        />
        <Line
          stroke="#0A0A0B"
          strokeLinecap="round"
          strokeWidth={6.979166666666667}
          x1="14.2"
          x2="20"
          y1="14.2"
          y2="20"
        />
        <Circle
          cx="20"
          cy="20"
          fill="#0A0A0B"
          r={4.1875}
        />
      </Svg>
    </View>
  </View>
</View>
`;

exports[`RevealBurst hero renders with custom particle count 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      {
        "height": 320,
        "width": 320,
      },
    ]
  }
>
  <Svg
    height={320}
    viewBox="0 0 320 320"
    width={320}
  >
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-0"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-1"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-2"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-3"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-4"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-5"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-6"
    />
    <Circle
      animatedProps={
        {
          "cx": 160,
          "cy": 160,
          "opacity": 0.85,
        }
      }
      fill="#10B981"
      r={5}
      testID="reveal-burst-particle-7"
    />
  </Svg>
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#ECFDF5",
            "justifyContent": "center",
            "shadowColor": "#10B981",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.18,
            "shadowRadius": 12,
          },
          {
            "borderRadius": 56,
            "height": 112,
            "width": 112,
          },
          {
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
      testID="reveal-burst-badge"
    >
      <Svg
        fill="none"
        height={67}
        viewBox="0 0 24 24"
        width={67}
      >
        <Circle
          cx="10"
          cy="10"
          fill="none"
          r="6"
          stroke="#0A0A0B"
          strokeWidth={6.979166666666667}
        />
        <Line
          stroke="#0A0A0B"
          strokeLinecap="round"
          strokeWidth={6.979166666666667}
          x1="14.2"
          x2="20"
          y1="14.2"
          y2="20"
        />
        <Circle
          cx="20"
          cy="20"
          fill="#0A0A0B"
          r={4.1875}
        />
      </Svg>
    </View>
  </View>
</View>
`;
